-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.15.9, 6.2.4, 6.3
-
c00e9fbbf3 (qt/qtdeclarative/dev) c00e9fbbf3 (qt/tqtc-qtdeclarative/dev) 4afd45162c (qt/tqtc-qtdeclarative/5.15) ff286158a7 (qt/qtdeclarative/6.3) ff286158a7 (qt/tqtc-qtdeclarative/6.3) ff286158a7 (qt/tqtc-qtdeclarative/6.3.1)
acceptableInput property of TextInput is not marked to be a read-only property in the documentation even though it is a read-only property.
For the reference please see the documentation at:
https://doc.qt.io/qt-5/qml-qtquick-textinput.html#acceptableInput-prop
https://doc.qt.io/qt-6/qml-qtquick-textinput.html#acceptableInput-prop
[read-only] should be added next to 'acceptableInput : bool'