Docs: Document textInput.acceptableInput as read only

Added \readonly to the qml property comment.

Fixes: QTBUG-103224
Pick-to: 5.15 6.2 6.3
Change-Id: I42ddad6501700c586fe4154cd675d881a4686f8d
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>